syntax = "proto3";
package kratos.api;

option go_package = "github.com/asynccnu/ccnubox-be/be-class/internal/conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
  Registry registry = 3;
  string proxyStuId = 4; // 执行定时任务时使用的学生ID
  string env =5; // 开发环境
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
  string name = 3;
}

message Data {
  message ES {
    string url = 1;
    bool setsniff = 2;
    string username = 3;
    string password = 4;
    bool keepDataAfterRestart = 5;//重启后是否保留数据
    string classroom = 6; //classroom的文件位置
  }
  message Redis {
    string addr = 1;
    string password = 2;
  }
  message DataBase {
    string dsn = 1;
    int32 data_alive = 2;
    string log_level = 3;
    string log_path = 4;
    string log_file_name = 5;
  }
  ES es = 1;
  Redis redis = 2;
  DataBase database = 3;
}
message Etcd {
  string addr = 1;
  string username = 2;
  string password = 3;
}
message Registry {
  Etcd etcd = 1;
  string proxysvc = 2;
  string classlistsvc = 3;
  string usersvc = 4;
}
